# Bruce-Unlimited-RF-Jammer

./: POLYMARKET_SHARP.md  README.md  README_COPYTRADER.md  pyproject.toml
polymarket_copytrader/: __init__.py  cli.py  client.py  config.py  models.py  ranking.py  scoring.py  serialize.py  synthetic.py  webapp.py
polymarket_copytrader/static/: dashboard.html
polymarket_sharp/: __init__.py  cli.py  client.py  pipeline.py  signals.py  synthetic.py
tests/: test_scoring.py  test_signals.py
