[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-copytrader"
version = "0.1.0"
description = "Find genuinely sharp Polymarket wallets by accuracy and copytrade only their high-consensus signals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
http = ["requests>=2.28"]
dev = ["pytest>=7.0"]

[project.scripts]
polymarket-copytrader = "polymarket_copytrader.cli:main"

[tool.setuptools]
packages = ["polymarket_copytrader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
